--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* 
+
 .home {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: 10%;
-} */
+  margin: 1% 5%;
+}
